tests/negative/gold/incomplete_string5_test.gold
tests/negative/incomplete_string5_test.toit:7:8: error: Unterminated string
  "$foo \
       ^~
Compilation failed.
